Add controller and service layer to modify products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 token.app.jwtSecret=${JWT_SECRET}
 token.app.jwtExpirationMs=86400000
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.format_sql=true
 spring.jpa.show-sql=true
